# options_server

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: README.md  ci-cd.yml
app/: .dockerignore  Dockerfile  README.md  app.py  option_calculator.py  pyproject.toml  requirements.txt
app/static/: styles.css
app/templates/: index.html
terraform/: acm.tf  alb.tf  ecr.tf  ecs.tf  efs.tf  iam.tf  outputs.tf  providers.tf  security.tf  variables.tf  vpc.tf
